--- a/src/main/resources/fr/amu/iut/bomberman/game.fxml
+++ b/src/main/resources/fr/amu/iut/bomberman/game.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bomberman.GameView" stylesheets="@style.css" prefWidth="1200.0" prefHeight="800.0">
+<StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.amu.iut.bomberman.GameView" stylesheets="@style.css" prefWidth="1200.0" prefHeight="800.0">
     <children>
         <!-- Menu Principal -->
         <VBox fx:id="mainMenu" alignment="CENTER" spacing="30.0" styleClass="main-menu" StackPane.alignment="CENTER">
