--- a/src/main/resources/fr/amu/iut/bomberman/game.fxml
+++ b/src/main/resources/fr/amu/iut/bomberman/game.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.amu.iut.bomberman.GameView" stylesheets="@style.css" prefWidth="1200.0" prefHeight="800.0">
@@ -32,34 +33,72 @@
         <!-- Interface de jeu -->
         <VBox fx:id="gameInterface" visible="false" StackPane.alignment="CENTER">
             <children>
-                <!-- Header avec infos joueurs et timer -->
-                <HBox alignment="CENTER_LEFT" prefHeight="80.0" spacing="20.0" styleClass="game-header">
+                <!-- HUD style Bomberman EXACT - Version corrigée -->
+                <HBox alignment="CENTER" prefHeight="80.0" styleClass="bomberman-hud-exact" spacing="40">
                     <children>
-                        <HBox fx:id="playerInfo" alignment="CENTER_LEFT" spacing="15.0"/>
-                        <Region HBox.hgrow="ALWAYS"/>
-                        <Label fx:id="gameTimer" styleClass="timer" text="Temps: 00:00"/>
+                        <!-- Joueur 1 Info -->
+                        <HBox fx:id="player1Info" alignment="CENTER" spacing="8.0" styleClass="player-hud-exact player1-hud-exact">
+                            <children>
+                                <ImageView fx:id="player1Icon" fitHeight="40.0" fitWidth="40.0" preserveRatio="true"/>
+                                <VBox alignment="CENTER" spacing="2">
+                                    <children>
+                                        <ImageView fx:id="player1BombIcon" fitHeight="24.0" fitWidth="24.0" preserveRatio="true"/>
+                                        <Label fx:id="player1BombCount" styleClass="hud-number-exact" text="0"/>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+
+                        <!-- Joueur 2 Info -->
+                        <HBox fx:id="player2Info" alignment="CENTER" spacing="8.0" styleClass="player-hud-exact player2-hud-exact">
+                            <children>
+                                <ImageView fx:id="player2Icon" fitHeight="40.0" fitWidth="40.0" preserveRatio="true"/>
+                                <VBox alignment="CENTER" spacing="2">
+                                    <children>
+                                        <ImageView fx:id="player2BombIcon" fitHeight="24.0" fitWidth="24.0" preserveRatio="true"/>
+                                        <Label fx:id="player2BombCount" styleClass="hud-number-exact" text="0"/>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+
+                        <!-- Timer central - Style EXACT Bomberman -->
+                        <HBox alignment="CENTER" styleClass="timer-section-exact" HBox.hgrow="NEVER" minWidth="120" prefWidth="120" maxWidth="120">
+                            <children>
+                                <Label fx:id="gameTimer" styleClass="hud-timer-exact" text="1:41"/>
+                            </children>
+                        </HBox>
+
+                        <!-- Joueur 3 Info -->
+                        <HBox fx:id="player3Info" alignment="CENTER" spacing="12.0" styleClass="player-hud-exact player3-hud-exact" visible="false">
+                            <children>
+                                <ImageView fx:id="player3Icon" fitHeight="48.0" fitWidth="48.0" preserveRatio="true"/>
+                                <Label fx:id="player3BombCount" styleClass="hud-number-exact" text="0"/>
+                            </children>
+                        </HBox>
+
+                        <!-- Joueur 4 Info -->
+                        <HBox fx:id="player4Info" alignment="CENTER" spacing="12.0" styleClass="player-hud-exact player4-hud-exact" visible="false">
+                            <children>
+                                <ImageView fx:id="player4Icon" fitHeight="48.0" fitWidth="48.0" preserveRatio="true"/>
+                                <Label fx:id="player4BombCount" styleClass="hud-number-exact" text="0"/>
+                            </children>
+                        </HBox>
                     </children>
                     <padding>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="10.0"/>
+                        <Insets bottom="10.0" left="40.0" right="40.0" top="10.0"/>
                     </padding>
                 </HBox>
 
                 <!-- Plateau de jeu - CENTRÉ -->
-                <StackPane VBox.vgrow="ALWAYS" alignment="CENTER">
+                <StackPane VBox.vgrow="ALWAYS" alignment="CENTER" styleClass="game-area">
                     <children>
                         <GridPane fx:id="gameGrid" alignment="CENTER" styleClass="game-board"/>
                     </children>
                 </StackPane>
 
-                <!-- Footer avec contrôles -->
-                <HBox alignment="CENTER" prefHeight="40.0" styleClass="game-footer">
-                    <children>
-                        <Label styleClass="controls-hint" text="ESC: Menu | P: Pause | R: Redémarrer | M: Menu principal"/>
-                    </children>
-                    <padding>
-                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
-                    </padding>
-                </HBox>
+                <!-- HBox invisible pour maintenir les infos joueurs (compatibilité code existant) -->
+                <HBox fx:id="playerInfo" visible="false" managed="false"/>
             </children>
         </VBox>
 
