--- a/src/main/resources/fxml/PlayerSelection.fxml
+++ b/src/main/resources/fxml/PlayerSelection.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.bomberman.controller.PlayerSelectionController"
+      fx:controller="fr.amu.iut.bomberman.controller.PlayerSelectionController"
       alignment="CENTER"
       spacing="30"
       styleClass="selection-container">
