--- a/src/main/resources/fxml/ProfileManager.fxml
+++ b/src/main/resources/fxml/ProfileManager.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.geometry.Insets?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <BorderPane xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.bomberman.controller.ProfileManagerController"
+            fx:controller="fr.amu.iut.bomberman.controller.ProfileManagerController"
             styleClass="profile-manager-container">
 
     <!-- En-tête -->
