feat: implement fullscreen management for game and menu transitions ( not complete )

--- a/src/main/resources/fxml/PlayerSelection.fxml
+++ b/src/main/resources/fxml/PlayerSelection.fxml
@@ -100,7 +100,7 @@
 
         <Button fx:id="startButton"
                 text="COMMENCER"
-                onAction="#handleStart"
+                onAction="#handleStartGame"
                 styleClass="primary-button"
                 prefWidth="200"
                 disable="true"/>
